# MCVR

./: .gitmodules  CMakeLists.txt  README.md
src/common/: shared.hpp
src/core/: CMakeLists.txt
src/core/middleware/: com_radiance_client_proxy_vulkan_VRProxy.cpp
src/core/render/: buffers.cpp  buffers.hpp  openxr_context.cpp  openxr_context.hpp  openxr_input.cpp  openxr_input.hpp  pipeline.cpp  pipeline.hpp  render_framework.cpp  render_framework.hpp  renderer.hpp  vr_system.cpp  vr_system.hpp
src/core/render/modules/world/: world_module.hpp
src/core/render/modules/world/dlss/: dlss_module.cpp  dlss_module.hpp  dlss_wrapper.cpp  dlss_wrapper.hpp
src/core/render/modules/world/fsr_upscaler/: fsr3_upscaler_module.cpp  fsr3_upscaler_module.hpp  upscaler_module.cpp  upscaler_module.hpp
src/core/render/modules/world/nrd/: nrd_module.cpp  nrd_module.hpp
src/core/render/modules/world/post_render/: post_render_module.cpp  post_render_module.hpp
src/core/render/modules/world/ray_tracing/: ray_tracing_module.cpp  ray_tracing_module.hpp
src/core/render/modules/world/temporal_accumulation/: temporal_accumulation_module.cpp  temporal_accumulation_module.hpp
src/core/render/modules/world/tone_mapping/: tone_mapping_module.cpp  tone_mapping_module.hpp
src/core/render/modules/world/xess_upscaler/: xess_sr_module.cpp  xess_sr_module.hpp  xess_wrapper.cpp  xess_wrapper.hpp
src/core/vulkan/: device.cpp  device.hpp  image.cpp  image.hpp  instance.cpp  instance.hpp  physical_device.cpp  physical_device.hpp  swapchain.cpp  window.cpp
src/shader/world/post_render/: world_post.vert  world_post_star.vert
src/shader/world/ray_tracing/: end_gateway.rchit  end_portal.rchit  world.rgen
